# rtosbench

./: .gitignore  README.md  west.yml
app/: CMakeLists.txt  prj.conf  prj_sysview.conf  prj_uart_ctf.conf
app/src/: nvic.c  zephyr_porting_layer.c
app/src/include/: config.h  nvic.h
cmsis-v2-freertos-port/: README.md  config.h  porting_layer.c  porting_layer.h
cmsis-v2-freertos-port/tests/: interrupt_processing.c  mq.c  mutex.c  round_robin.c  sem.c
